--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -123,6 +123,43 @@
     align-items: center;
   }
 
-  .data{
+  .dataRow {
+    display: flex;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    padding: 20px
+  }
+  .slide-image {
+    object-fit: contain;
+    width: 100%;
+    max-height: 100px;
+    margin-right: 10px;
+    transition: transform 450ms
+  }
+
+  .slide-image:hover {
+    transform: scale(1.08)
+  }
+
+  .slideContainer{
+    width: 500px;
+    height: 300px;
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 50px;
+  }
+
+  .slideImage{
+    width: 500px;
+    height: 300px;
+    margin: auto;
+    margin-top: 10px;
+   
+  }
+
+  .projectContainer {
+    width: 200px;
+    height: 150px;
+    background-color:blue;
     display: flex;
   }
